--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-card">
     <div class="profile-photo-container">
-      <img src="1750448395004.jpg" alt="Tyirell Lee-Bradford" class="profile-photo" />
+      <img src="image (1).jpg" alt="Tyirell Lee-Bradford" class="profile-photo" />
     </div>
 
 
@@ -21,10 +21,10 @@
         <h1>Tyirell Lee-Bradford</h1>
         <div class="social-icons">
           <a href="https://twitter.com/ty_yoi" target="_blank">
-            <img src="twitter-6359396_640 (1).webp" alt="Twitter" />
+            <img src="image (3).png" alt="Twitter" />
           </a>
           <a href="https://www.linkedin.com/in/tyirell-lee-bradford-400251318/" target="_blank">
-            <img src="download.png" alt="LinkedIn" />
+            <img src="image.png" alt="LinkedIn" />
           </a>
         </div>
       </div>
@@ -63,7 +63,7 @@
 
   <div id="my-story" class="tab-content active">
     <h2>My Story</h2>
-<img src="JReid+InDeed+logo.png" alt="JRied indeed logo"width="50" 
+<img src="image (2).png" alt="JRied indeed logo"width="50" 
      height="50" />
     <p>
 Over the past year, I’ve had the opportunity to grow in ways I never expected through the Jreid Indeed program. What started as an interest in real estate quickly turned into a deep dive into IT, coding, and professional development.
